# grey-greg-game

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  common.cmake  headers.cmake
.github/workflows/: cmake-multi-platform.yml  msys2.yml  multiplatform.yml  window_ci  window_ci.yml
.misc/: dump_all_files.py
game/: CMakeLists.txt  headers.cmake  main.c  sources.cmake  world.c  world.h
game/engine/: ai_component.c  ai_component.h  ai_system.c
platformer/: ToDo
source/: CMakeLists.txt  grey.map.txt  headers.cmake  sources.cmake
source/core/: ilist.c  ilist.h  irand.c  irand.h  istack.c  istack.h  simd.h
source/game_application/: event_system.c  event_system.h  game_main.c  game_main.h  grey_constants.h  input_system.c  input_system.h  raylib_glue.c  raylib_glue.h
source/game_logic/: actor_manager.c  ai_system.c  arm_neon_ext_itunu.h  component.c  component.h  entity.c  entity.h  game_logic.c  game_logic.h  network.c  physics_system.c  physics_system.h  process_manager.c  process_manager.h  render_system.c  simd.h  systems_manager.c  systems_manager.h
source/game_logic/components/: aabb_component.c  aabb_component.h  ai_component.c  ai_component.h  collision_component.c  collision_component.h  collision_spatial_hash.c  collision_spatial_hash.h  component.c  component.h  component_base.h  component_manager.c  component_manager.h  force_component.c  force_component.h  grid_component.c  grid_component.h  mass_component.c  mass_component.h  position_component.c  position_component.h  render_component.c  render_component.h  rotation_component.c  rotation_component.h  scale_component.c  scale_component.h  velocity_component.c  velocity_component.h  verlet_component.c  verlet_component.h  waypoint_component.c  waypoint_component.h
source/game_logic/entities/: actor.c  actor.h  actor_manager.c  entity.c  entity.h
source/game_logic/grid/: dfs_maze.c  dfs_maze.h  grid.c  grid.h  wave_fn_collapse.c  wave_fn_collapse.h
source/game_logic/systems/: ai_system.c  gravity_system.c  input_system.c  input_system.h  physics_system.c  physics_system.h  render_system.c  systems_manager.c  systems_manager.h
source/graphics/: game_view.c  game_view.h  human_view.c  human_view.h  raylib_glue.h  render_system.c  render_system.h  resources.c
source/physics/: gravity_system.c  gravity_system.h  physics_system.c  physics_system.h
source/resources/: game_app_path.c  game_app_path.h  resource_manager.c  resource_manager.h
